@startuml

title __IMMOVABLE's Class Diagram__\n

  namespace Model.Pieces {
    namespace Immovable {
      class Model.Pieces.Immovable.Flag {
          + Flag()
      }
    }
  }
  

  namespace Model.Pieces {
    namespace Immovable {
      class Model.Pieces.Immovable.Trap {
          + Trap()
      }
    }
  }
  

  Model.Pieces.Immovable.Flag -up-|> Model.Pieces.ImmovablePiece
  Model.Pieces.Immovable.Trap -up-|> Model.Pieces.ImmovablePiece


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
